<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/textwelcome"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <Button
            android:background="@drawable/button_style"
            android:id="@+id/btnLogout"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="14dp"
            android:layout_width="wrap_content"
            android:onClick="btnLogout"
            android:text="@string/logout"
            style="?android:attr/buttonStyleSmall"
            />
    </RelativeLayout>
    
    <LinearLayout
        android:background="@color/black"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
	    >
        
        <TextView android:id="@+id/column_header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/match_name"
            />
        <TextView android:id="@+id/column_header2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/count_players"
            />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:orientation="vertical" >
	    
	    <ListView
	        android:id="@+id/listView1"
	        android:layout_height="wrap_content"
	        android:layout_width="match_parent"
	        >
	
	    </ListView>
	</LinearLayout>
	
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_width="match_parent"
        android:orientation="vertical" >
	    
	    <Button
	        android:background="@drawable/button_style"
	        android:id="@+id/btnCrearPartida"	 
	        android:layout_height="wrap_content"
	        android:layout_width="wrap_content"
	        android:onClick="btnCreateMatch"
	        android:text="@string/add_match" />
	</LinearLayout>

</LinearLayout>